Makefile modified. Comments added to task1.1...

--- a/os_lab_1/Makefile
+++ b/os_lab_1/Makefile
@@ -1,6 +1,6 @@
 make_task1_1: task1_1.c 
 		   	  gcc -o task1_1.exe task1_1.c
-run_task1_1: task1_1
+run_task1_1: task1_1.exe
 		./task1_1.exe
 .PHONY: all run_task1_1
 clean: rm task1_1.exe
