Makefile modified. Task1_1 comments added. Task2.1 added.

--- a/os_lab_1/Makefile
+++ b/os_lab_1/Makefile
@@ -1,6 +1,11 @@
 make_task1_1: task1_1.c 
-		   	  gcc -o task1_1.exe task1_1.c
+		   	  gcc -Wall -o task1_1.exe task1_1.c
+make_task2_1: task2_1.c 
+		   	  gcc -Wall -o task2_1.exe task2_1.c -lpthread
 run_task1_1: task1_1.exe
-		./task1_1.exe
+		./task1_1.exe		   	  
+run_task2_1: task2_1.exe
+		./task2_1.exe	
+clean: 
+	rm task1_1.exe task2_1.exe	
 .PHONY: all run_task1_1
-clean: rm task1_1.exe
