producer, consumer LKMs added

--- a/os_lab_3/Makefile
+++ b/os_lab_3/Makefile
@@ -1,5 +1,8 @@
 #MACROS
 obj-m := task1_1.o
+#obj-m += task1_1.o
+#obj-m += producer.o
+#obj-m += consumer.o
 PWD := $(shell pwd)
 KVER := $(shell uname -r)
 
